# fpga_project_sp26

./: .gitmodules  README.md
hardware/: .gitignore  Makefile  run_all_sims
hardware/scripts/: fom.py  get_cost.py  get_cpi.py  hex_to_serial.py  impl.tcl  pre_autograder.py  program.tcl  run_coremark.py  synth.tcl
hardware/sim/: asm_tb.sv  bdd_small_tb.sv  bios_imem_tb.sv  bios_tb.sv  c_tests_tb.sv  cpu_tb.sv  csr_counter_tb.sv  ecall_tb.sv  echo_tb.sv  fpmmult_small_tb.sv  isa_tb.sv  m_extension_tb.sv  mmio_counter_tb.sv  mmult_small_tb.sv  small_tb.sv  timer_interrupt_tb.sv  uart_parse_tb.sv  zephyr_tb.sv
hardware/sim_models/: div_gen_sim.sv
hardware/src/: clocks.sv  z1top.sv  z1top.xdc
hardware/src/io_circuits/: debouncer.sv  edge_detector.sv  fifo.sv  synchronizer.sv  uart.sv  uart_receiver.sv  uart_transmitter.sv
hardware/src/memories/: bios_mem.sv  dmem.sv  imem.sv
hardware/src/riscv_core/: cpu.sv  opcode.vh  reg_file.sv
software/: .gitignore  Makefrag
software/151_library/: memory_map.h  uart.h
software/bios/: bios.c  start.s
software/echo/: echo.c
software/m_extension/: Makefrag
software/m_extension/mmult/: benchmark.c  mmult.c
software/riscv-isa-tests/: Makefile
software/rtos/: conf
software/rtos/boards/riscv/eecs151_core/: Kconfig  Kconfig.board  Kconfig.defconfig  board.yaml  eecs151_core.dts  eecs151_core_defconfig  (+1 more)
software/rtos/code/coremark/: CMakeLists.txt  prj.conf
software/rtos/code/hello_world/: CMakeLists.txt
software/rtos/code/hello_world/src/coremark/: core_portme.c
software/small/fpmmult/: Makefile
(+2 files in other folders)
